==> ralph-pruitt76/Sky-Pack-December-2016/Source/bgm111.c <==
#include "bgm111.h"
#include <string.h>
#include <stdio.h>
#include "gecko_bglib.h"
#include "app_data.h"
#include "usart.h"
#include "ErrCodes.h"
#define BG_DATA_LENGTH          200
#define BG_DATA_LOW_WATERMARK   5

void BGM111_LowLevel_Init(void)
{
  GPIO_InitTypeDef GPIO_InitStructure;
  USART_InitTypeDef USART_InitStructure;
  NVIC_InitTypeDef NVIC_InitStructure;
  
  /* Enable the USART peripheral */
  RCC_APB1PeriphClockCmd(BGM111_UART_CLK, ENABLE);
  /* Enable TX, RX, CTS and RTS GPIO clocks */
  RCC_AHBPeriphClockCmd(BGM111_UART_TX_GPIO_CLK | BGM111_UART_RX_GPIO_CLK |
                        BGM111_UART_CTS_GPIO_CLK | BGM111_UART_RTS_GPIO_CLK |
                        BGM111_RESET_GPIO_CLK, ENABLE);
  
  /* Set TX, RX, CTS and RTS pin functions */
  GPIO_PinAFConfig(BGM111_UART_GPIO_PORT, BGM111_UART_TX_SOURCE, BGM111_UART_TX_AF);
  GPIO_PinAFConfig(BGM111_UART_GPIO_PORT, BGM111_UART_RX_SOURCE, BGM111_UART_RX_AF);
  GPIO_PinAFConfig(BGM111_UART_GPIO_PORT, BGM111_UART_CTS_SOURCE, BGM111_UART_CTS_AF);
  GPIO_PinAFConfig(BGM111_UART_GPIO_PORT, BGM111_UART_RTS_SOURCE, BGM111_UART_RTS_AF);
  
  /* USART TX, RX, CTS and RTS pin configuration */
  GPIO_InitStructure.GPIO_Pin = BGM111_UART_TX_PIN | BGM111_UART_RX_PIN |
                                BGM111_UART_CTS_PIN | BGM111_UART_RTS_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_Init(BGM111_UART_GPIO_PORT, &GPIO_InitStructure);
  
  /* BGM111 reset pin configuration */
  GPIO_InitStructure.GPIO_Pin = BGM111_RESET_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_Init(BGM111_RESET_GPIO_PORT, &GPIO_InitStructure);
  
  /* USART configuration */
  USART_InitStructure.USART_BaudRate = BGM111_UART_BAUDRATE;
  USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_RTS_CTS;
  USART_InitStructure.USART_Mode = USART_Mode_Tx | USART_Mode_Rx;
  USART_InitStructure.USART_Parity = USART_Parity_No;
  USART_InitStructure.USART_StopBits = USART_StopBits_1;
  USART_InitStructure.USART_WordLength = USART_WordLength_8b;
  
  /* Apply USART configuration */
  USART_Init(BGM111_UART, &USART_InitStructure);

  /* Turn on USART interrupt for RX and errors */
  USART_ITConfig(BGM111_UART, USART_IT_RXNE, ENABLE);
  USART_ITConfig(BGM111_UART, USART_IT_ERR, ENABLE);
  
  /* Enable the USART interrupt in the NVIC */
  NVIC_InitStructure.NVIC_IRQChannel = BGM111_UART_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
  NVIC_Init(&NVIC_InitStructure);
  
  /* Enable the BGM111 module USART */
  USART_Cmd(BGM111_UART, ENABLE);
  
  /* Housekeeping Init. */
  blemsgs.tx_wr = 0;
  ble.booted =  false;
  ble.connection = false;
  ble.data_Connection = false;
}

int BGM111_Receive(uint32_t len, uint8_t *data)
{
  
  /* Wait until we received the requested number of data bytes */
  while (len)
  {
    /* Is there a byte in the receive buffer? */
    if (ble.rx_rd != ble.rx_wr)
    {
      /* Disable interrupt */
      NVIC_DisableIRQ(BGM111_UART_IRQn);
      /* Clear the request to execute the BLE stack now we're doing it */
      ble.req_exec = false;
      /* Write to the output buffer */
      *data++ = ble.rx_buf[ble.rx_rd];
      /* Next byte in the receive buffer */
      ble.rx_rd = NextBufIdx(ble.rx_rd);
      /* Enable interrupt */
      NVIC_EnableIRQ(BGM111_UART_IRQn);

      /* One byte less to wait for */
      len--;
    }
    else
    {
      // Time to prime the pump again....
      /* Turn on USART interrupt for RX and errors */
      USART_ITConfig(BGM111_UART, USART_IT_RXNE, ENABLE);
      USART_ITConfig(BGM111_UART, USART_IT_ERR, ENABLE);
      break;
    }
  }
  /* No timeout, we always succeed since we already do packet parsing
   * in the interrupt handler */
  return 0;
}

void BGM111_Init(void)
{
  /* Perform low level init to initialize the UART for use with the 
   * BGM111 module */
  BGM111_LowLevel_Init();
  /* Pull the BGM111 reset pin low */
  GPIO_ResetBits(BGM111_RESET_GPIO_PORT, BGM111_RESET_PIN);
  /* Initialize BGLib with our transmit, receive and peek routines */
  BGLIB_INITIALIZE_NONBLOCK(BGM111_Transmit, BGM111_Receive, BGM111_Peek);
  // Wait 10 Msec before releasing Reset.
  delay_10ms();
  /* Release the BGM111 reset pin */
  GPIO_SetBits(BGM111_RESET_GPIO_PORT, BGM111_RESET_PIN);
}

void BGM111_ProcessInput(void)
{
  /* Event structure */
  static uint32_t temp1;
  uint8_t tempBffr2[20];
  bool Boot_evt = false;

  /* Check whether there is an event to service */
  if (!ble.evt)
  {
    ble.evt = gecko_peek_event();
  }
  if (ble.evt)
  {
    // Log Event
    blemsgs.msgBuff[blemsgs.tx_wr] = BGLIB_MSG_ID(ble.evt->header);
    blemsgs.tx_wr = NextBufIdx(blemsgs.tx_wr);
    
    /* Service based on event header message ID */
    temp1 = BGLIB_MSG_ID(ble.evt->header);
    switch(temp1)
    //switch (BGLIB_MSG_ID(ble.evt->header))
    {
      /* System boot handler */
      case gecko_evt_system_boot_id:
        SkyPack_MNTR_UART_Transmit( (uint8_t *)"<<<BGM_BOOT>>>\r\n" );
        SendApp_String( (uint8_t *)"<<<BGM_BOOT>>>");
        /* Flag that the BLE module has booted */
        ble.booted = true;
        /* Fallthrough intentional */
      /* Connection closed handler */
      case gecko_evt_le_connection_closed_id:
        ble.connection = false;
        /* Set GAP mode: discoverable and connectable */
        if (gecko_cmd_le_gap_set_mode(le_gap_general_discoverable,
                    le_gap_undirected_connectable)->result < bg_errspc_bg)
        {
          // The following is a simple patch...Best way right now to recover is to force HARD Reset....
          if (Boot_evt == false)
          {
            SkyPack_MNTR_UART_Transmit( (uint8_t *)"<<<BGM_CNCTCLOSE>>>\r\n" );
            SendApp_String( (uint8_t *)"<<<BGM_CNCTCLOSE>>>");
            SkyPack_Reset( FATAL_CNCTDROP );
          }
          /* We succeeded, don't handle this event again */
          ble.evt = NULL;
        }
        break;
      //case 0x000800A0:
      case gecko_evt_le_connection_opened_id:
        /* Open Event...Set Active Connection Flag */
        /* Don't handle this event again */
        SkyPack_MNTR_UART_Transmit( (uint8_t *)"<<<BGM_CNCTOPEN>>>\r\n" );
        SendApp_String( (uint8_t *)"<<<BGM_CNCTOPEN>>>");
        ble.connection = true;
        ble.evt = NULL;
        break;
      // gecko_evt_gatt_server_user_write_request_id
      case 0x020A0020:
        // Clear Heart Beat... We have detected it.
        SkyPack_MNTR_UART_Transmit( (uint8_t *)"-*-" );
        Clr_HeartBeat();
        ble.evt = NULL;
        break;
      //case 0x030A0000:
      case gecko_evt_gatt_server_characteristic_status_id:
        // Clear Heart Beat... We have detected it.
        Flicker_Led();
        SkyPack_MNTR_UART_Transmit( (uint8_t *)"-O-" );
        Clr_HeartBeat();
        ble.evt = NULL;
        break;
      case 0x080000A0:
      case 0x000000A0:
      case 0x200000A0:
      case 0x050A0020:
//      case 0x200000A0:
//      case gecko_cmd_gatt_server_send_characteristic_notification_id: */
      /* Dummy catchall */
        /* Don't handle this event again */
        ble.evt = NULL;
        break;
      case gecko_rsp_gatt_read_characteristic_value_by_uuid_id:
      case 0x020800A0:
      case 0x000900A0:
        // Clear Heart Beat... We have detected it.
        SkyPack_MNTR_UART_Transmit( (uint8_t *)"<rsp_read_ch_value_by_uuid_id>");
        if (ble.evt->data.evt_gatt_server_attribute_value.value.len != 0)
        {
          sprintf( (char *)tempBffr2, "<STR:%s>", ble.evt->data.evt_gatt_server_attribute_value.value.data);
          SkyPack_MNTR_UART_Transmit( tempBffr2 );
        }
        ble.evt = NULL;
        break;
      case gecko_evt_endpoint_status_id:
       SkyPack_MNTR_UART_Transmit( (uint8_t *)"<evt_endpoint_status_id>");
        ble.evt = NULL;
        break;
      /* Dummy catchall */
      default:
        sprintf( (char *)tempBffr2, "<UNKN:%08x>", temp1);
        SkyPack_MNTR_UART_Transmit( tempBffr2);
        /* Don't handle this event again */
        ble.evt = NULL;
        break;
    };
    // Test RX Buffer and Set req_exec flag.
    if (BufUsed(ble.rx_wr, ble.rx_rd) != 0)
    {
      /* Indicate we need to execute the BLE stack to process 
       * the received packet */
      ble.req_exec = true;
    }
  } // EndIf (ble.evt)
}

void BGM111_UART_IRQHandler(void)
{
//  static uint8_t header_cnt, payload_cnt, payload_len;
//  uint8_t tempBffr2[10];
  
  /* Transmit register empty? */
  if (USART_GetITStatus(BGM111_UART, USART_IT_TXE) == SET)
  {
    /* Are we still sending data? */
    if (ble.tx_rd != ble.tx_wr)
    {
      /* Send a byte */
      USART_SendData(BGM111_UART, ble.tx_buf[ble.tx_rd]);
      /* Bump the index */
      ble.tx_rd = NextBufIdx(ble.tx_rd);
    }
    else
    {
      /* Turn off the transmit interrupt */
      USART_ITConfig(BGM111_UART, USART_IT_TXE, DISABLE);
    }
  }
  
  /* Was there an error? */
  if (USART_GetITStatus(BGM111_UART, USART_IT_ORE_RX | 
      USART_IT_ORE_ER | USART_IT_NE | USART_IT_FE) == SET)
  {
    /* Reset the receive state */
    ble.rx_state = BGRX_SYNC;
    /* Clear the error by reading the data register */
    USART_ReceiveData(BGM111_UART);
    /* We're done */
    return;
  }

  /* Was a new byte received? */
  if (USART_GetITStatus(BGM111_UART, USART_IT_RXNE) == SET)
  {
    /* Get the byte (this also clears the flag) */
    uint8_t c = USART_ReceiveData(BGM111_UART);
    // TEST CODE....
    //sprintf( (char *)tempBffr2, "<%02x>", c);
    //SkyPack_MNTR_UART_Transmit(tempBffr2);
    //SkyPack_MNTR_UART_Transmit( (uint8_t *)"O" );
    /* Process the received character... */
    SkyBrd_ProcessBGMChar(c);
  }
}

void BGM111_Transmit(uint32_t len, uint8_t *data)
{
  uint32_t tempmsg;
  uint32_t timeout_Cnt;
  
  // Log MSG into buffer
  tempmsg = 0xff000000 | len;
  blemsgs.msgBuff[blemsgs.tx_wr] = tempmsg;
  blemsgs.tx_wr = NextBufIdx(blemsgs.tx_wr);
  tempmsg = (uint32_t)(data[0]<<24) + (uint32_t)(data[1]<<16) + (uint32_t)(data[2]<<8) + (uint32_t)(data[3]);
  blemsgs.msgBuff[blemsgs.tx_wr] = tempmsg;
  blemsgs.tx_wr = NextBufIdx(blemsgs.tx_wr);
  tempmsg = (uint32_t)(data[4]<<24) + (uint32_t)(data[5]<<16) + (uint32_t)(data[6]<<8) + (uint32_t)(data[7]);
  blemsgs.msgBuff[blemsgs.tx_wr] = tempmsg;
  blemsgs.tx_wr = NextBufIdx(blemsgs.tx_wr);
  
  /* Add bytes when there is space, wait if necessary */
  // OK...But we Can't wait forever...Will place a timeout Count.
  timeout_Cnt = TX_TIMEOUT_CNT;
  
  while (len) {
    /* Get the next write index */
    uint8_t nextidx = NextBufIdx(ble.tx_wr);
    /* We're not hitting the read index? (There is space?) */
    if (nextidx != ble.tx_rd)
    {
      /* Put the data in the buffer */
      ble.tx_buf[ble.tx_wr] = *data;

      /* Disable interrupt */
      NVIC_DisableIRQ(BGM111_UART_IRQn);
      /* Trigger an interrupt if we're starting with an empty buffer */
      if (ble.tx_wr == ble.tx_rd)
      {
        USART_ITConfig(BGM111_UART, USART_IT_TXE, ENABLE);
      }
      /* Increment the write index */
      ble.tx_wr = nextidx;
      /* Enable interrupt */
      NVIC_EnableIRQ(BGM111_UART_IRQn);

      /* Update the incoming data length and pointer */
      len--;
      data++;
      //Found Space...Reset Count.
      timeout_Cnt = TX_TIMEOUT_CNT;
    }
    else
    {
      //Decrement Count
      if ( timeout_Cnt-- == 0)
      {
        // If this happens...NOT BOOTED..Clear ths flag or infinite loop.
        ble.booted = false;
        // We have detected a ERROR_TXBGMBUF_FULL error on BGM111...Log it!
        SkPck_ErrCdLogErrCd( ERROR_TXBGMBUF_FULL, MODULE_bgm111 );
        SkyPack_Reset( FATAL_TXBGMBUF_FULL );
      }
    }
  }
}
