==> ralph-pruitt76/Road-Board-December-2016/Src/bgm111.c <==
#include "bgm111.h"
#include <string.h>
#include "gecko_bglib.h"
#include "stm32l1xx_hal.h"
#include "usart.h"
#include "gpio.h"
#include "ErrorCodes.h"
#include "i2c.h"
#include "wwdg.h"
#include "tim.h"
#include "Parser.h"
#define BG_DATA_LENGTH          200
#define BG_DATA_LOW_WATERMARK   5

void BGM111_LowLevel_Init(void)
{
  blemsgs.tx_wr = 0;
  ble.booted =  false;
  ble.connection = false;
  ble.data_Connection = false;
  ble.CMD_Mode = false;
  ble.TackArmed = TACK_OFF;
  ble.TackCnt = 0;
  ble.SyncFlag = SYNC_PROC;
}

int BGM111_Receive(uint32_t len, uint8_t *data)
{
  
  /* Wait until we received the requested number of data bytes */
  while (len)
  {
    /* Is there a byte in the receive buffer? */
    if (ble.rx_rd != ble.rx_wr)
    {
      /* Disable interrupt */
//      NVIC_DisableIRQ(BGM111_UART_IRQn);
      /* Clear the request to execute the BLE stack now we're doing it */
      ble.req_exec = false;
      /* Write to the output buffer */
      *data++ = ble.rx_buf[ble.rx_rd];
      /* Next byte in the receive buffer */
      ble.rx_rd = NextBufIdx(ble.rx_rd);
      /* Enable interrupt */
//      NVIC_EnableIRQ(BGM111_UART_IRQn);

      /* One byte less to wait for */
      len--;
    }
    else
    {
      // Time to prime the pump again....
      HAL_UART_EnableBGM_RX();
      break;
    }
  }
  return 0;
}

void BGM111_Init(void)
{
  /* Perform low level init to initialize the UART for use with the 
   * BGM111 module */
  BGM111_LowLevel_Init();
  /* Pull the BGM111 reset pin low */
  RoadBrd_gpio_Off( gRESET_BGM111 );
  /* Initialize BGLib with our transmit, receive and peek routines */
  BGLIB_INITIALIZE_NONBLOCK(BGM111_Transmit, BGM111_Receive, BGM111_Peek);
  /* Release the BGM111 reset pin */
  RoadBrd_gpio_On( gRESET_BGM111 );
}

void BGM111_ProcessInput(void)
{
  /* Event structure */
  uint32_t temp1;
  uint8_t tempBffr2[20];
  bool Boot_evt = false;
  struct gecko_msg_le_gap_set_mode_rsp_t *Result_Ptr;
  /* Check whether there is an event to service */
  if (!ble.evt)
  {
    ble.evt = gecko_peek_event();
  }
  if (ble.evt)
  {
    // Log Event
    blemsgs.msgBuff[blemsgs.tx_wr] = BGLIB_MSG_ID(ble.evt->header);
    blemsgs.tx_wr = NextBufIdx(blemsgs.tx_wr);
    
    /* Service based on event header message ID */
    temp1 = BGLIB_MSG_ID(ble.evt->header);
    switch(temp1)
    //switch (BGLIB_MSG_ID(ble.evt->header))
    {
      /* System boot handler */
      case gecko_evt_system_boot_id:
        RoadBrd_UART_Transmit(MONITOR_UART, (uint8_t *)"<BGM_BOOT>");
        Boot_evt = true;
        /* Flag that the BLE module has booted */
        ble.booted = true;
        /* Fallthrough intentional */
      /* Connection closed handler */
      case gecko_evt_le_connection_closed_id:
        // Wait for power to stabilize...200msec
//        RoadBrd_Delay( 100 );
//        gecko_cmd_le_gap_set_mode(le_gap_general_discoverable, le_gap_undirected_connectable);
//        RoadBrd_Delay( 100 );
//        gecko_cmd_le_gap_set_mode(le_gap_non_discoverable, le_gap_non_connectable);
//        RoadBrd_Delay( 100 );
        /* Set GAP mode: discoverable and connectable */
        ble.connection = false;
//        Result_Ptr = gecko_cmd_le_gap_set_mode(le_gap_limited_discoverable, le_gap_undirected_connectable);
        Result_Ptr = gecko_cmd_le_gap_set_mode(le_gap_general_discoverable, le_gap_undirected_connectable);
        if ( Result_Ptr->result == 0)
//        if (gecko_cmd_le_gap_set_mode(le_gap_general_discoverable, le_gap_undirected_connectable)->result == 0)
//        if (gecko_cmd_le_gap_set_mode(le_gap_limited_discoverable, le_gap_undirected_connectable)->result < bg_errspc_bg)
        {
          // Don't reset first time. This is legitimate
          // The following is a simple patch...Best way right now to recover is to force HARD Reset....
          if (Boot_evt == false)
          {
            RoadBrd_UART_Transmit(MONITOR_UART, (uint8_t *)"<BGM_CNCTCLOSE>");
            RdBrd_ErrCdLogErrCd( ERROR_BGM_CNNCT, MODULE_bgm111 );
            Clr_HrtBeat_Cnt();
            RdBrd_BlinkErrCd( ERROR_BGM_CNNCT );
            //RoadBrd_Delay( 1000 );
            HAL_NVIC_SystemReset();
          }
          /* We succeeded, don't handle this event again */
          ble.evt = NULL;
        }
        break;
      //case 0x000800A0:
      case gecko_evt_le_connection_opened_id:
        /* Open Event...Set Active Connection Flag */
        /* Don't handle this event again */
        RoadBrd_UART_Transmit(MONITOR_UART, (uint8_t *)"<BGM_CNCTOPEN>");
        ble.connection = true;
        ble.evt = NULL;
        break;
      // gecko_evt_gatt_server_user_write_request_id
      case 0x020A0020:
        // Clear Heart Beat... We have detected it.
        RoadBrd_UART_Transmit(MONITOR_UART, (uint8_t *)"-*-");
        Clr_HeartBeat();
        ble.evt = NULL;
        break;
      //case 0x030A0000:
      case gecko_evt_gatt_server_characteristic_status_id:
        // Clear Heart Beat... We have detected it.
        RoadBrd_UART_Transmit(MONITOR_UART, (uint8_t *)"-O-");
        Clr_HeartBeat();
        ble.evt = NULL;
        break;
//      case 0x080000A0:
//      case 0x020B00A0:
//      case 0x000000A0:
      case 0x200000A0:
      case 0x050A0020:
//      case 0x200000A0:
//      case gecko_cmd_gatt_server_send_characteristic_notification_id: */
      /* Dummy catchall */
        /* Don't handle this event again */
        ble.evt = NULL;
        break;
      case gecko_rsp_gatt_read_characteristic_value_by_uuid_id:
      case 0x020800A0:
      case 0x000900A0:
        RoadBrd_UART_Transmit(MONITOR_UART, (uint8_t *)"<rsp_read_ch_value_by_uuid_id>");
        if (ble.evt->data.evt_gatt_server_attribute_value.value.len != 0)
        {
          sprintf( (char *)tempBffr2, "<STR:%s>", ble.evt->data.evt_gatt_server_attribute_value.value.data);
          RoadBrd_UART_Transmit(MONITOR_UART, tempBffr2);
        }
        ble.evt = NULL;
        break;
      case gecko_evt_endpoint_status_id:
        RoadBrd_UART_Transmit(MONITOR_UART, (uint8_t *)"<evt_endpoint_status_id>");
        ble.evt = NULL;
        break;
      /* Dummy catchall */
      default:
        sprintf( (char *)tempBffr2, "<UNKN:%08x>", temp1);
        RoadBrd_UART_Transmit(MONITOR_UART, tempBffr2);
        /* Don't handle this event again */
        ble.evt = NULL;
        break;
    };
    // Test RX Buffer and Set req_exec flag.
//    if (BufUsed(ble.rx_wr, ble.rx_rd) != 0)
//    {
//      /* Indicate we need to execute the BLE stack to process 
//       * the received packet */
//      ble.req_exec = true;
//    }
  } // EndIf (ble.evt)
}

void BGM111_UART_IRQHandler(UART_HandleTypeDef *huart)
{
  /* Transmit register empty? */
  //if (USART_GetITStatus(BGM111_UART, USART_IT_TXE) == SET)
  if (__HAL_UART_GET_FLAG(huart, UART_FLAG_TXE) == SET)
  {
    /* Are we still sending data? */
    if (ble.tx_rd != ble.tx_wr)
    {
      /* Send a byte */
      USART_SendData(huart, ble.tx_buf[ble.tx_rd]);
      /* Bump the index */
      ble.tx_rd = NextBufIdx(ble.tx_rd);
    }
    else
    {
      /* Turn off the transmit interrupt */
      __HAL_UART_DISABLE_IT(huart, UART_IT_TXE);
    }
  }
  
  /* Was there an error? */
  if (__HAL_UART_GET_FLAG(huart, UART_FLAG_ORE | 
      HAL_UART_ERROR_PE | UART_FLAG_NE | UART_FLAG_FE) == SET)
  {
    /* Reset the receive state */
    ble.rx_state = BGRX_SYNC;
    /* Clear the error by reading the data register */
    USART_ReceiveData(huart);
    /* We're done */
    return;
  }

  /* Was a new byte received? */
  if (__HAL_UART_GET_FLAG(huart, UART_FLAG_RXNE) == SET)
  {
    /* Get the byte (this also clears the flag) */
    uint8_t c = USART_ReceiveData(huart);
    /* Process the received character... */
    RoadBrd_ProcessBGMChar(c);
  }
}

void BGM111_Transmit(uint32_t len, uint8_t *data)
{
  uint32_t tempmsg;
  uint32_t timeout_Cnt;
  
  // Log MSG into buffer
  tempmsg = 0xff000000 | len;
  blemsgs.msgBuff[blemsgs.tx_wr] = tempmsg;
  blemsgs.tx_wr = NextBufIdx(blemsgs.tx_wr);
  tempmsg = (uint32_t)(data[0]<<24) + (uint32_t)(data[1]<<16) + (uint32_t)(data[2]<<8) + (uint32_t)(data[3]);
  blemsgs.msgBuff[blemsgs.tx_wr] = tempmsg;
  blemsgs.tx_wr = NextBufIdx(blemsgs.tx_wr);
  tempmsg = (uint32_t)(data[4]<<24) + (uint32_t)(data[5]<<16) + (uint32_t)(data[6]<<8) + (uint32_t)(data[7]);
  blemsgs.msgBuff[blemsgs.tx_wr] = tempmsg;
  blemsgs.tx_wr = NextBufIdx(blemsgs.tx_wr);
  
  /* Add bytes when there is space, wait if necessary */
  // OK...But we Can't wait forever...Will place a timeout Count.
  timeout_Cnt = TX_TIMEOUT_CNT;
  
  while (len) {
    /* Get the next write index */
    uint8_t nextidx = NextBufIdx(ble.tx_wr);
    /* We're not hitting the read index? (There is space?) */
    if (nextidx != ble.tx_rd)
    {
      /* Put the data in the buffer */
      ble.tx_buf[ble.tx_wr] = *data;

      /* Disable interrupt */
      HAL_NVIC_DisableIRQ(USART3_IRQn);
      /* Trigger an interrupt if we're starting with an empty buffer */
      if (ble.tx_wr == ble.tx_rd)
      {
        HAL_UART_EnableBGM_TXE();
      }
      /* Increment the write index */
      ble.tx_wr = nextidx;
      /* Enable interrupt */
      HAL_NVIC_EnableIRQ(USART3_IRQn);

      /* Update the incoming data length and pointer */
      len--;
      data++;
      //Found Space...Reset Count.
      timeout_Cnt = TX_TIMEOUT_CNT;
    }
    else
    {
      //Decrement Count
      if ( timeout_Cnt-- == 0)
      {
        // If this happens...NOT BOOTED..Clear ths flag or infinite loop.
        ble.booted = false;
        // We have detected a ERROR_TXBGMBUF_FULL error on BGM111...Log it!
        RdBrd_ErrCdLogErrCd( ERROR_TXBGMBUF_FULL, MODULE_bgm111 );
        RdBrd_BlinkErrCd( ERROR_TXBGMBUF_FULL );
        HAL_NVIC_SystemReset();
      }
    }
  }
}
